syntax = "proto3";
option go_package = "grpc/proto";

message Disconnection {
  int64 clientId = 1;
  int64 timestamp = 2;
}

message ClientMessage {
  int64 clientId = 1;
  string message = 2;
  int64 timestamp = 3;
}

message ServerMessage {
  string username = 1;
  string message = 2;
  int64 timestamp = 3;
}
message Empty{}

service ChittyChat {
  rpc SendClientMessage(ClientMessage) returns (Empty);
  rpc ConnectClient(stream ServerMessage) returns (stream ServerMessage);
  rpc DisconnectClient(Disconnection) returns (Empty);
}
